# document-scan-cpp

./: .gitignore  <  CMakeLists.txt  main.cpp
include/: image.h  image_processing.h  matrix.h  matrix_processing.h  matrix_utils.h  png_reader.h
include/png_reader/: png_reader.h
modules/: CMakeLists.txt  image_core.ixx  png_reader.cpp  png_reader.ixx
src/: CMakeLists.txt  image_processing.cpp  matrix.cpp  matrix_processing.cpp  matrix_utils.cpp  png_reader.cpp
src/png_reader/: png_reader.cpp
tests/: CMakeLists.txt  cmake_install.cmake  test_png_reader.cpp
tests/modules/: cmake_install.cmake
tests/tests/: cmake_install.cmake
